1.2.0
  - fail2ban is enabled by [fail2ban] option 'enabled = yes'. Previously,
    the mere existence of section [fail2ban] was sufficient.
  - *new* option, 'anoncmds' in section 'matrix', where previously only
    the 'anonymous' user was a legitimate synonym, you may now provide
    many different ones -- humorously, you could provide 'root'.
  - *new* option, 'script_ssh' in section 'matrix', points to a new
    login matrix script that takes new keyword arguments, 'anonymous',
    or 'new' as booleans True or False, or user keyword argument as
    string representing the (already authenticated) user handle.
  - keyword arguments for gosub() and goto() are now supported.
  - ssh key authentication support
  - *removed*: x84.bbs.log.ColoredConsoleHandler.
    If you see exception: ``ImportError: No module named log``
    simply change line, ``class = x84.bbs.log.ColoredConsoleHandler``
    to new line, ``class = logging.StreamHandler``
    in your ~/.x84/logging.ini or /etc/x84/logging.ini file!
  - new bulletins, userlist, from hellbeard
  - new door 'sesame.py' script, from maze
  - project 'blessed' has been merged. Some minor API changes that
    currently just emit a DeprecationWarning, will be removed in 2.0,
    especially in regards to sequence-safe textwrap() function, one
    should instead use term.wrap().
  - project 'wcwidth' has been merged. No change.
  - move_x now works for screen/etc. TERM types (fixed in blessed).
  - ssh server support: for existing servers, simply add a new section
    to your default.ini::
    [ssh]
    addr = 127.0.0.1
    port = 6022
    hostkey = /my/path/to/.x84/ssh_host_rsa_key
    hostkeybits = 2048
  - rudimentary web.py-based web server module (webserve.py) for API
    endpoints.
    This requires both pyOpenSSL and web.py packages, which are not
    installed by default by setup.py. It is configured with the [web]
    default.ini section (the "chain" setting is optional; only use it