@@ -244,6 +244,7 @@ def main(handle=None):
 
     # set syncterm font, if any
     if syncterm_font and term._kind == 'ansi':
+    if syncterm_font and term._kind.startswith('ansi'):
         echo(syncterm_setfont(syncterm_font))
 
     # fetch user record
